--- a/Classification/Language_Identification/Thiyasizwe_Kubeka_DSjuly2020.ipynb
+++ b/Classification/Language_Identification/Thiyasizwe_Kubeka_DSjuly2020.ipynb
@@ -1,9 +1,18 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Import Libraries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -22,10 +31,20 @@
     "from nltk.corpus import stopwords\n",
     "from sklearn.svm import LinearSVC, SVC\n",
     "from sklearn.metrics import f1_score\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.naive_bayes import MultinomialNB\n",
+    "from sklearn.feature_extraction.text import CountVectorizer, TfidfTransformer\n",
+    "from sklearn.model_selection import train_test_split, GridSearchCV\n",
     "\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
-    "%matplotlib inline\n"
+    "%matplotlib inline\n",
+    "\n",
+    "# Style\n",
+    "sns.set(font_scale=1.5)\n",
+    "plt.style.use('seaborn-pastel')\n",
+    "plt.style.use('seaborn-poster')\n",
+    "\n"
    ]
   },
   {
@@ -37,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -114,13 +133,20 @@
        "4     ven  khomishini ya ndinganyiso ya mbeu yo ewa maana..."
       ]
      },
-     "execution_count": 3,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "train.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exploritory data analysis"
    ]
   },
   {
@@ -159,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,44 +201,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#rfc = RandomForestClassifier()\n",
-    "#rfc.fit(X_train, y_train)\n",
-    "#rfc_pred = rfc.predict(X_val)"
+    "MNB = MultinomialNB()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
-    "clf = LinearSVC(random_state=42)\n",
-    "clf.fit(X_train, y_train)\n",
-    "clf_pred = clf.predict(X_val)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.9977772673538025"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "f1_score(y_val, clf_pred, average=\"macro\")"
+    "MNB.fit(X_train, y_train)\n",
+    "MNB_pred = MNB.predict(X_val)"
    ]
   },
   {
@@ -224,11 +227,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 72,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9990907936114738"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#f1_score(y_val, rfc_pred, average=\"macro\")"
+    "f1_score(y_val, MNB_pred, average=\"macro\")"
    ]
   },
   {
@@ -240,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,16 +271,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_pred = clf.predict(test_vec)"
+    "y_pred = MNB.predict(test_vec)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +362,7 @@
        "4      5                      Winste op buitelandse valuta.     afr"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,8 +372,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Saving file as csv "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
