--- a/US Airline Sentiment Analysis/US Flight analysis .ipynb
+++ b/US Airline Sentiment Analysis/US Flight analysis .ipynb
@@ -2762,15 +2762,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy 0.7459016393442623\n",
-      "Model Runtime: 16.17 seconds\n"
+      "Accuracy 0.7472677595628415\n",
+      "Model Runtime: 15.83 seconds\n"
      ]
     },
     {
@@ -2803,44 +2803,44 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.777365</td>\n",
-       "      <td>0.912854</td>\n",
-       "      <td>0.839679</td>\n",
+       "      <td>0.777058</td>\n",
+       "      <td>0.915033</td>\n",
+       "      <td>0.840420</td>\n",
        "      <td>918.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0.590909</td>\n",
-       "      <td>0.419355</td>\n",
-       "      <td>0.490566</td>\n",
+       "      <td>0.602804</td>\n",
+       "      <td>0.416129</td>\n",
+       "      <td>0.492366</td>\n",
        "      <td>310.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0.746988</td>\n",
-       "      <td>0.525424</td>\n",
-       "      <td>0.616915</td>\n",
+       "      <td>0.739645</td>\n",
+       "      <td>0.529661</td>\n",
+       "      <td>0.617284</td>\n",
        "      <td>236.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>accuracy</th>\n",
-       "      <td>0.745902</td>\n",
-       "      <td>0.745902</td>\n",
-       "      <td>0.745902</td>\n",
-       "      <td>0.745902</td>\n",
+       "      <td>0.747268</td>\n",
+       "      <td>0.747268</td>\n",
+       "      <td>0.747268</td>\n",
+       "      <td>0.747268</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>macro avg</th>\n",
-       "      <td>0.705088</td>\n",
-       "      <td>0.619211</td>\n",
-       "      <td>0.649054</td>\n",
+       "      <td>0.706502</td>\n",
+       "      <td>0.620274</td>\n",
+       "      <td>0.650024</td>\n",
        "      <td>1464.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>weighted avg</th>\n",
-       "      <td>0.732987</td>\n",
-       "      <td>0.745902</td>\n",
-       "      <td>0.729845</td>\n",
+       "      <td>0.734129</td>\n",
+       "      <td>0.747268</td>\n",
+       "      <td>0.730750</td>\n",
        "      <td>1464.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -2849,15 +2849,15 @@
       ],
       "text/plain": [
        "              precision    recall  f1-score      support\n",
-       "0              0.777365  0.912854  0.839679   918.000000\n",
-       "1              0.590909  0.419355  0.490566   310.000000\n",
-       "2              0.746988  0.525424  0.616915   236.000000\n",
-       "accuracy       0.745902  0.745902  0.745902     0.745902\n",
-       "macro avg      0.705088  0.619211  0.649054  1464.000000\n",
-       "weighted avg   0.732987  0.745902  0.729845  1464.000000"
+       "0              0.777058  0.915033  0.840420   918.000000\n",
+       "1              0.602804  0.416129  0.492366   310.000000\n",
+       "2              0.739645  0.529661  0.617284   236.000000\n",
+       "accuracy       0.747268  0.747268  0.747268     0.747268\n",
+       "macro avg      0.706502  0.620274  0.650024  1464.000000\n",
+       "weighted avg   0.734129  0.747268  0.730750  1464.000000"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2867,14 +2867,14 @@
     "from sklearn.metrics import f1_score, accuracy_score, precision_score, recall_score, classification_report, confusion_matrix\n",
     "import time\n",
     "modelstart = time.time()\n",
-    "rf = RandomForestClassifier(n_estimators = 100 , max_features= 'auto', bootstrap = 'False')\n",
+    "rf = RandomForestClassifier(n_estimators = 100 , max_features= 'sqrt', bootstrap = 'True')\n",
     "rf.fit(X_train, y_train)\n",
     "y_pred = rf.predict(X_val)\n",
     "rf_f1 = round(f1_score(y_val, y_pred, average='weighted'),2)\n",
     "print('Accuracy %s' % accuracy_score(y_pred, y_val))\n",
     "print(\"Model Runtime: %0.2f seconds\"%((time.time() - modelstart)))\n",
     "report = classification_report(y_val, y_pred, output_dict=True)\n",
-    "pd.DataFrame(report).transpose()"
+    "pd.DataFrame(report).transpose()\n"
    ]
   },
   {
@@ -3512,9 +3512,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best hyper parameter: {'bootstrap': True, 'max_features': 'sqrt', 'n_estimators': 100}\n"
+     ]
+    }
+   ],
    "source": [
     "# Run GridSearch to tune the hyper-parameter\n",
     "from sklearn.model_selection import GridSearchCV\n",
@@ -3536,7 +3544,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Using the RandomizedSearchCV we observed that our model for the random forest classifier improved by 1,05% , where initally our model accuracy was 72% and after applying the new hyperparameters in moved up to 73%. Though from research we know that a RandomizedSearchCV works works extremely well with a large dataset , the concept of hyperparameter tuning was put to the test and yielded a positive outcome."
+    "After use cases where we use both the RandomizedSearhCV and GridSearchCV to find the best features, we observed that using the GridSearchCV returned a high accuracy than that of the RandomizedSearchCV. The reason is because GridSearchCV works well with a small dataset as it searches for all possible combinations of hyperparameters in the dataset. \n",
+    "\n",
+    "### RandomizedSearchCV                                                                                          \n",
+    "\n",
+    "#### Model Accuracy\n",
+    "\n",
+    "Before: 74%\n",
+    "\n",
+    "\n",
+    "After: 75%\n",
+    "\n",
+    "\n",
+    "Model improvement: 1%\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "### GridSearchCV\n",
+    "\n",
+    "#### Model Accuracy\n",
+    "\n",
+    "Before: 74%\n",
+    "\n",
+    "After: 75%\n",
+    "\n",
+    "Model Accuracy: 1,3 %"
    ]
   },
   {
